@@ -1,3 +1,8 @@
+2001-11-21  Damon J. Courtney <damon@unreality.com>
+
+	* src/mod_rivet.c
+	    Renamed more commands into the Rivet_ naming scheme.
+
 2001-11-20  Damon J. Courtney <damon@unreality.com>
 
 	* src/tcl_commands.c
